🚧 scripts > Create water effect

--- a/includes/views/partials/body.twig
+++ b/includes/views/partials/body.twig
@@ -1,5 +1,6 @@
 <body>
     {% block body %}{% endblock %}
     {# Scripts #}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/93/three.min.js"></script>
     <script src="{{ base_url() }}/scripts/app.js"></script>
 </body>
