--- a/includes/views/pages/home.twig
+++ b/includes/views/pages/home.twig
@@ -8,6 +8,12 @@
 
     {% embed './partials/body.twig' %}
         {% block body %}
+            <h1 class='homeTitle abs'>L'or bleu</h1>
+            <a class='linkHome' href='#'>
+                <div  class='waterPathButton abs'>
+                    Suivre le chemin<br/>de l'eau
+                </div>
+            </a>
         {% endblock %}
     {% endembed %}
 
