--- a/includes/views/pages/home.twig
+++ b/includes/views/pages/home.twig
@@ -14,6 +14,7 @@
                     Suivre le chemin<br/>de l'eau
                 </div>
             </a>
+            {% include './layouts/menu.twig' %}
         {% endblock %}
     {% endembed %}
 
