🗂️ styles > Refactor structure

--- a/includes/views/layouts/menu.twig
+++ b/includes/views/layouts/menu.twig
@@ -5,7 +5,7 @@
         <span class="button--text">Sommaire</span>
     </span>
     <a href="#" class="button--button">
-        <span class="button--title">L'introduction de l'eau</span>
+        <span class="button--title">État des lieux</span>
     </a>
     <a href="#" class="button--button">
         <span class="button--title">L'utilisation de l'eau</span>
