🚿 styles > Clean chapter page coding

--- a/includes/views/pages/chapter.twig
+++ b/includes/views/pages/chapter.twig
@@ -15,33 +15,11 @@
             </div>
             <p class="chapter-p">Chaque minute, cinq personnes meurent dans le monde parce qu’elles n’ont pas accès à l’eau potable.</p>
             <div class="chapter-explore-button">
-                <svg class="chapter-explore-svg" version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                viewBox="0 0 100 125" style="enable-background:new 0 0 100 125;" xml:space="preserve">
-                    <g>
-                        <path d="M50.4,94.9c-14.4,0-26.1-11.7-26.1-26.1V31.2C24.2,16.8,36,5.1,50.4,5.1s26.1,11.7,26.1,26.1v37.6
-                            C76.5,83.2,64.8,94.9,50.4,94.9z M50.4,6.5c-13.6,0-24.7,11.1-24.7,24.7v37.6c0,13.6,11.1,24.7,24.7,24.7
-                            c13.6,0,24.7-11.1,24.7-24.7V31.2C75.1,17.6,64,6.5,50.4,6.5z" style="fill:white"/>
-                        <rect x="49.7" y="15" width="1.4" height="25.2" style="fill:white"/>
-                    </g>
-                </svg>
+                {% include './layouts/cursor.twig' %}
                 <span class="chapter-explore-text">Explorer</span>
             </div>
             <div class="chapter-medias-button">
-                <svg class="chapter-medias-svg" version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    viewBox="0 0 100 125" style="enable-background:new 0 0 100 125;" xml:space="preserve">
-                    <g>
-                        <path d="M81.3,35h-5.9c0-4.1-0.6-15.3-7.6-22.8C63.4,7.4,57.4,5,50,5s-13.4,2.4-17.8,7.2c-7,7.5-7.6,18.8-7.6,22.8h-5.9
-                           C15,35,12,38,12,41.7v46.5c0,3.7,3,6.7,6.7,6.7h62.6c3.7,0,6.7-3,6.7-6.7V41.7C88,38,85,35,81.3,35z M33,12.9
-                           c4.2-4.5,9.9-6.8,17-6.8s12.8,2.3,17,6.8c6.8,7.3,7.4,18.2,7.4,22.1H67c0-3.3-0.4-11.8-5.4-17.2c-2.8-3-6.6-4.5-11.6-4.5
-                           s-8.8,1.5-11.7,4.5c-4.9,5.4-5.4,14-5.3,17.2h-7.3C25.6,31.1,26.2,20.1,33,12.9z M34,35c0-3.1,0.4-11.4,5.1-16.4
-                           c2.6-2.8,6.2-4.2,10.9-4.2s8.3,1.4,10.9,4.1c4.7,5,5.1,13.3,5.1,16.4L34,35L34,35z M87,88.3c0,3.1-2.6,5.7-5.7,5.7H18.7
-                           c-3.1,0-5.7-2.6-5.7-5.7V41.7c0-3.1,2.6-5.7,5.7-5.7h6.4h8.4h33h8.4h6.4c3.1,0,5.7,2.6,5.7,5.7V88.3z" style="fill:white"/>
-                        <path d="M57.9,58c0-4.4-3.6-7.9-7.9-7.9c-4.4,0-7.9,3.6-7.9,7.9c0,2.7,1.4,5.2,3.6,6.6l-2.9,12.7c0,0.2,0,0.3,0.1,0.4
-                           s0.3,0.2,0.4,0.2h13.6c0.2,0,0.3-0.1,0.4-0.2c0.1-0.1,0.1-0.3,0.1-0.4l-2.9-12.7C56.6,63.2,57.9,60.7,57.9,58z M53.5,63.9
-                           c-0.2,0.1-0.3,0.3-0.2,0.6l2.9,12.4H43.8l2.9-12.4c0.1-0.2,0-0.5-0.2-0.6c-2.1-1.3-3.4-3.5-3.4-5.9c0-3.8,3.1-6.9,6.9-6.9
-                           c3.8,0,6.9,3.1,6.9,6.9C56.9,60.5,55.6,62.7,53.5,63.9z" style="fill:white"/>
-                    </g>
-               </svg>
+                {% include './layouts/lock.twig' %}
                <span class="chapter-medias-text">Medias</span>
             </div>
             <div class="chapter-about-container">
