--- a/includes/views/pages/chapter.twig
+++ b/includes/views/pages/chapter.twig
@@ -8,11 +8,11 @@
 
     {% embed './partials/body.twig' %}
         {% block body %}
-            <h1 class="chapter-title" data-baseurl="{{ base_url() }}/">{{ chapter.title | raw }}</h1>
             <div class="chapter-number-container">
-                <span class="chapter-number">1</span>
+                <span class="chapter-number">{{ chapter.number }}</span>
                 <div class="chapter-line"></div>
             </div>
+            <h1 class="chapter-title" data-baseurl="{{ base_url() }}/">{{ chapter.title | raw }}</h1>
             <p class="chapter-p">{{ chapter.paragraph | raw }}</p>
             <div class="chapter-explore-button">
                 {% include './layouts/cursor.twig' %}
