pages>home link to first chapter

--- a/includes/views/pages/home.twig
+++ b/includes/views/pages/home.twig
@@ -9,7 +9,7 @@
     {% embed './partials/body.twig' %}
         {% block body %}
             <h1 class='homeTitle abs'>L'or bleu</h1>
-            <a class='linkHome' href='#'>
+            <a class='linkHome' href='./chapters/utilisation'>
                 <div  class='waterPathButton abs'>
                     Suivre le chemin<br/>de l'eau
                 </div>
