🖥️ views > Build explorer page

--- a/includes/views/pages/404.twig
+++ b/includes/views/pages/404.twig
@@ -3,7 +3,7 @@
 {% block html %}
 
     {% embed './partials/head.twig' %}
-        {% block title %}404 page not found{% endblock %}
+        {% block title %}L'or bleu | 404{% endblock %}
     {% endembed %}
 
     {% embed './partials/body.twig' %}
