--- a/includes/views/pages/chapter.twig
+++ b/includes/views/pages/chapter.twig
@@ -3,7 +3,7 @@
 {% block html %}
 
     {% embed './partials/head.twig' %}
-        {% block title %}Chapitre{% endblock %}
+        {% block title %}L'or bleu | Chapitre {{ chapter.number }}{% endblock %}
     {% endembed %}
 
     {% embed './partials/body.twig' %}
