--- a/includes/views/pages/home.twig
+++ b/includes/views/pages/home.twig
@@ -3,7 +3,7 @@
 {% block html %}
 
     {% embed './partials/head.twig' %}
-        {% block title %}Web documentary{% endblock %}
+        {% block title %}L'or bleu{% endblock %}
     {% endembed %}
 
     {% embed './partials/body.twig' %}
