views > add sidebar

--- a/includes/views/pages/chapter.twig
+++ b/includes/views/pages/chapter.twig
@@ -22,33 +22,7 @@
                 {% include './layouts/lock.twig' %}
                <span class="chapter-medias-text">Medias</span>
             </div>
-            <div class="chapter-about-container">
-                <h3 class="chapter-about-title">Qui sommes-nous</h3>
-                <p class="chapter-about-blabla1">Nous sommes des étudiants en 2ème année, à HETIC, école de l’Internet. Bla bla bla balabalalalalaalalalalalla allaalallalalalalalalalalalalalalala defzfzfzfzfzf fzfezfezfzffd dsqdqdqdqd dqdqdq za.  a a azaazaaaa fsdfsfs </p>
-                <div class="about-undertitle-container">
-                    <h4 class="about-undertitle">Conception et réalisation</h4>
-                    Alain Cao Von Truong <br>
-                    Samantha Cruveilher <br>
-                    Jean-Noël Duchevet <br>
-                </div>
-                <div class="about-undertitle-container">
-                    <h4 class="about-undertitle">Création artistique</h4>
-                    Adeline Berte
-                </div>
-                <div class="about-undertitle-container">
-                    <h4 class="about-undertitle">Motion Design</h4>
-                    Justine Di Meo
-                </div>
-                <div class="about-undertitle-container">
-                    <h4 class="about-undertitle">Textes</h4>
-                    Martin Chapuis
-                    Justine Di Meo
-                </div>
-                <div class="about-undertitle-container">
-                    <h4 class="about-undertitle">Coordinateur du projet</h4>
-                    François Pumir
-                </div>
-            </div>
+            {% include './layouts/sidebar.twig' %}
             {% include './layouts/menu.twig' %}
         {% endblock %}
     {% endembed %}
