🎨 styles > Set wavy animation

--- a/includes/views/pages/explorer.twig
+++ b/includes/views/pages/explorer.twig
@@ -10,9 +10,11 @@
         {% block body %}
             <h1 class="explorer-title" data-baseurl="{{ base_url() }}/"><a href="{{ base_url() }}/" title="L'or bleu">L'or bleu</a></h1>
             {% for _chapter in chapters %}
-                <a href="{{ path_for('chapter', {slug: _chapter.slug}) }}" class="explorer--button">
-                    <span class="explorer--span">{{ _chapter.title | raw }}</span>
-                </a>
+                <span class="explorer--button">
+                    <a href="{{ path_for('chapter', {slug: _chapter.slug}) }}" class="explorer--target">
+                        <span class="explorer--span">{{ _chapter.title | raw }}</span>
+                    </a>
+                </span>
             {% endfor %}
         {% endblock %}
     {% endembed %}
