--- a/includes/views/pages/home.twig
+++ b/includes/views/pages/home.twig
@@ -8,9 +8,9 @@
 
     {% embed './partials/body.twig' %}
         {% block body %}
-            <h1 class='homeTitle abs'>L'or bleu</h1>
-            <a class='linkHome' href='./chapters/utilisation'>
-                <div  class='waterPathButton abs'>
+            <h1 class="homeTitle abs">L'or bleu</h1>
+            <a class="linkHome" href="{{ path_for('explorer') }}">
+                <div  class="waterPathButton abs">
                     Suivre le chemin<br/>de l'eau
                 </div>
             </a>
