--- a/includes/views/pages/404.twig
+++ b/includes/views/pages/404.twig
@@ -8,7 +8,11 @@
 
     {% embed './partials/body.twig' %}
         {% block body %}
-            <h1>Error</h1>
+            <div id="barba-wrapper">
+                <div class="barba-container">
+                    <h1>Error</h1>
+                </div>
+            </div>
         {% endblock %}
     {% endembed %}
 
