--- a/includes/views/pages/explorer.twig
+++ b/includes/views/pages/explorer.twig
@@ -8,14 +8,18 @@
 
     {% embed './partials/body.twig' %}
         {% block body %}
-            <h1 class="explorer-title" data-baseurl="{{ base_url() }}/"><a href="{{ base_url() }}/" title="L'or bleu">L'or bleu</a></h1>
-            {% for _chapter in chapters %}
-                <span class="explorer--button">
-                    <a href="{{ path_for('chapter', {slug: _chapter.slug}) }}" class="explorer--target">
-                        <span class="explorer--span">{{ _chapter.title | raw }}</span>
-                    </a>
-                </span>
-            {% endfor %}
+            <div id="barba-wrapper">
+                <div class="barba-container">      
+                    <h1 class="explorer-title" data-baseurl="{{ base_url() }}/"><a href="{{ base_url() }}/" title="L'or bleu">L'or bleu</a></h1>
+                    {% for _chapter in chapters %}
+                        <span class="explorer--button">
+                            <a href="{{ path_for('chapter', {slug: _chapter.slug}) }}" class="explorer--target">
+                                <span class="explorer--span">{{ _chapter.title | raw }}</span>
+                            </a>
+                        </span>
+                    {% endfor %}
+                </div>
+            </div>
         {% endblock %}
     {% endembed %}
 
