--- a/includes/views/pages/chapter.twig
+++ b/includes/views/pages/chapter.twig
@@ -10,6 +10,7 @@
         {% block body %}
             <div id="barba-wrapper">
                 <div class="barba-container">
+                    <h2 class="chapter-header" data-baseurl="{{ base_url() }}/"><a href="{{ base_url() }}/" title="L'or bleu">L'or bleu</a></h2>
                     <div class="chapter-number-container">
                         <span class="chapter-number">{{ chapter.number }}</span>
                         <div class="chapter-line"></div>
