--- a/includes/views/pages/chapter.twig
+++ b/includes/views/pages/chapter.twig
@@ -10,7 +10,9 @@
         {% block body %}
             <div id="barba-wrapper">
                 <div class="barba-container">
-                    <h2 class="chapter-header" data-baseurl="{{ base_url() }}/"><a href="{{ base_url() }}/" title="L'or bleu">L'or bleu</a></h2>
+                    <h2 class="chapter-header" data-baseurl="{{ base_url() }}/">
+                        <a class="home" href="{{ path_for('home') }}" title="L'or bleu">L'or bleu</a> &#62; <a class="chapters" href="{{ path_for('explorer') }}" title="Explorer">Explorer</a>
+                    </h2>
                     <div class="chapter-number-container">
                         <span class="chapter-number">{{ chapter.number }}</span>
                         <div class="chapter-line"></div>
