🔨 includes > Edit page name

--- a/includes/views/pages/chapter.twig
+++ b/includes/views/pages/chapter.twig
@@ -11,7 +11,7 @@
             <div id="barba-wrapper">
                 <div class="barba-container">
                     <h2 class="chapter-header" data-baseurl="{{ base_url() }}/">
-                        <a class="home" href="{{ path_for('home') }}" title="L'or bleu">L'or bleu</a> &#62; <a class="chapters" href="{{ path_for('explorer') }}" title="Explorer">Explorer</a>
+                        <a class="home" href="{{ path_for('home') }}" title="L'or bleu">L'or bleu</a> &#62; <a class="chapters" href="{{ path_for('chapters') }}" title="Explorer">Explorer</a> &#62; Chapitre {{ chapter.number }}
                     </h2>
                     <div class="chapter-number-container">
                         <span class="chapter-number">{{ chapter.number }}</span>
