--- a/includes/views/pages/home.twig
+++ b/includes/views/pages/home.twig
@@ -11,7 +11,7 @@
             <div id="barba-wrapper">
                 <div class="barba-container">
                     <h1 class="homeTitle abs">L'or bleu</h1>
-                    <a class="linkHome" href="{{ path_for('explorer') }}">
+                    <a class="linkHome" href="{{ path_for('chapters') }}">
                         <div  class="waterPathButton abs">
                             Suivre le chemin<br/>de l'eau
                         </div>
