--- a/includes/views/pages/chapter.twig
+++ b/includes/views/pages/chapter.twig
@@ -10,18 +10,25 @@
         {% block body %}
             <div id="barba-wrapper">
                 <div class="barba-container">
-                    <h2 class="chapter-header" data-baseurl="{{ base_url() }}/">
-                        <a class="home" href="{{ path_for('home') }}" title="L'or bleu">L'or bleu</a> &#62; <a class="chapters" href="{{ path_for('chapters') }}" title="Explorer">Explorer</a> &#62; Chapitre {{ chapter.number }}
-                    </h2>
-                    <div class="chapter-number-container">
-                        <span class="chapter-number">{{ chapter.number }}</span>
-                        <div class="chapter-line"></div>
-                    </div>
-                    <h1 class="chapter-title" data-baseurl="{{ base_url() }}/">{{ chapter.title | raw }}</h1>
-                    <p class="chapter-p">{{ chapter.paragraph | raw }}</p>
-                    <div class="chapter-explore-button">
-                        {% include './layouts/cursor.twig' %}
-                        <span class="chapter-explore-text">Explorer</span>
+                    <div class="slider">
+                        <section class="slide">
+                            <h2 class="chapter-header" data-baseurl="{{ base_url() }}/">
+                                <a class="home" href="{{ path_for('home') }}" title="L'or bleu">L'or bleu</a> &#62; <a class="chapters" href="{{ path_for('chapters') }}" title="Explorer">Explorer</a> &#62; Chapitre {{ chapter.number }}
+                            </h2>
+                            <div class="chapter-number-container">
+                                <span class="chapter-number">{{ chapter.number }}</span>
+                                <div class="chapter-line"></div>
+                            </div>
+                            <h1 class="chapter-title" data-baseurl="{{ base_url() }}/">{{ chapter.title | raw }}</h1>
+                            <p class="chapter-p">{{ chapter.paragraph | raw }}</p>
+                            <div class="chapter-explore-button">
+                                {% include './layouts/cursor.twig' %}
+                                <span class="chapter-explore-text">Explorer</span>
+                            </div>
+                        </section>
+                        <section class="slide">1</section>
+                        <section class="slide">2</section>
+                        <section class="slide">3</section>
                     </div>
                     <div class="chapter-medias-button">
                         {% include './layouts/lock.twig' %}
