--- a/includes/views/pages/chapters.twig
+++ b/includes/views/pages/chapters.twig
@@ -11,7 +11,7 @@
             <div id="barba-wrapper">
                 <div class="barba-container">      
                     <h1 class="chapters-nav" data-baseurl="{{ base_url() }}/">
-                        <a href="{{ base_url() }}/" title="L'or bleu">L'or bleu</a>
+                        <a href="{{ path_for('home') }}" title="L'or bleu">L'or bleu</a>
                     </h1>
                     {% for _chapter in chapters %}
                         <span class="chapters--button">
