views > Fix slide1 chapter2

--- a/includes/views/pages/chapter2slide1.twig
+++ b/includes/views/pages/chapter2slide1.twig
@@ -25,6 +25,8 @@
                         Entre agriculture, industrie et quotidien, la quantité d’eau a drastiquement diminué au cours de ces dernières années.
                     </div>
                     <div class="chapter2-container-circles">
+                        <div class="chapter2-line1"></div>
+                        <div class="chapter2-line2"></div>
                         <div class="chapter2-circle1"></div>
                         <div class="chapter2-circle2"></div>
                         <div class="chapter2-circle3"></div>
