🚧 settings > Add content text

--- a/includes/views/pages/chapter2slide2.twig
+++ b/includes/views/pages/chapter2slide2.twig
@@ -43,8 +43,11 @@
                         </div>
                     </div>
                     <div class="slide2-container3">
-                        <div class="infos">Comment l'expliquer ?</div>
-                        <div class="infos">Quelles conséquences ?</div>
+                        <!-- <div class="infos2">Comment l'expliquer ?</div>
+                        <div class="infos2-text">L’irrigation constitue un outil de gestion efficace contre les <span class="text-bold">aléas</span> des précipitations. Elle permet de choisir des variétés à haut <span class="text-bold">rendement</span> en appliquant les fertilisants et traitements nécessaires.<br>
+                            L’irrigation rend ces cultures économiquement intéressantes, et a pour effet de favoriser l’augmentation des rendements.</div> -->
+                        <div class="infos2">Quelles conséquences ?</div>
+                        <div class="infos2-text">Il y a des conséquences importantes sur la <span class="text-bold">pollution</span> des eaux des nappes et des rivières avec de fortes concentrations en <span class="text-bold">azote</span> et en <span class="text-bold">molécules</span> issues des produits phytosanitaires, ainsi qu’en phosphore dans certaines zones.</div>
                     </div>
                     <div class="chapter-explore-button">
                         {% include './layouts/cursor.twig' %}
