--- a/includes/views/pages/chapter2slide2.twig
+++ b/includes/views/pages/chapter2slide2.twig
@@ -11,7 +11,7 @@
             <div id="barba-wrapper">
                 <div class="barba-container">
                     <h2 class="chapter-header" data-baseurl="{{ base_url() }}/">
-                        <a class="home" href="{{ path_for('home') }}" title="L'or bleu">L'or bleu</a> &#62; <a class="chapters" href="{{ path_for('explorer') }}" title="Explorer">Explorer</a>
+                        <a class="home" href="{{ path_for('home') }}" title="L'or bleu">L'or bleu</a> &#62; <a class="chapters" href="{{ path_for('chapters') }}" title="Explorer">Explorer</a>
                     </h2>
                     <h1 class="chapter-title" data-baseurl="{{ base_url() }}/">{{ chapter.title | raw }}</h1>
                     <span class="slide-chapter">Chapitre</span>
