--- a/includes/views/layouts/sidebar.twig
+++ b/includes/views/layouts/sidebar.twig
@@ -1,12 +1,14 @@
 <div class="chapter-about-container">
-    <h3 class="chapter-about-title js-title1">Qui sommes-nous</h3>
-    <h3 class="chapter-about-title js-title2 hidden" >Sur le projet</h3>
-    <h3 class="chapter-about-title js-title3 hidden">Coopération</h3>
+    <div class="chapter-about-titles">
+        <h3 class="chapter-about-title js-title1">Qui sommes-nous</h3>
+        <h3 class="chapter-about-title js-title2 hidden">Sur le projet</h3>
+        <h3 class="chapter-about-title js-title3 hidden">Coopération</h3>
+    </div>
     <div class="chapter-about-text js-text1">
         <p class="chapter-about-blabla">Nous sommes des étudiants en 2ème année, à HETIC, école de l’Internet. Bla bla bla balabalalalalaalalalalalla allaalallalalalalalalalalalalalalala defzfzfzfzfzf fzfezfezfzffd dsqdqdqdqd dqdqdq za.  a a azaazaaaa fsdfsfs </p>
         <div class="about-undertitle-container">
             <h4 class="about-undertitle">Conception et réalisation</h4>
-            Alain Cao Von Truong <br>
+            Alain Cao Van Truong <br>
             Samantha Cruveilher <br>
             Jean-Noël Duchevet <br>
         </div>
