--- a/includes/views/layouts/sidebar.twig
+++ b/includes/views/layouts/sidebar.twig
@@ -1,4 +1,12 @@
 <div class="chapter-about-container">
+
+    <svg class="sideBarWave" width="100%" height="100%" viewBox="0 0 49vw 900" preserveEspectRatio="none">
+        <path d="M200,0c0,0 -200,46.405 -200,177c0,130.595 126.228,90.241 149,287c22.772,196.759 51,436 51,436l32,0l-4,-900l-28,0Z" data-to="M0,0c0,0 0,46.405 0,177c0,130.595 1.152,98.101 0,296c-1.153,198.07 0,427 0,427l200,0l0,-900l-200,0Z"/>
+    </svg>
+    <svg class="placeHolder" width="100%" height="100%" viewBox="0 0 49vw 900" preserveEspectRatio="none">
+        <path d="M.5,0V177c0,130.6,1.2,98.1,0,296s0,427,0,427H600V0Z"/>
+    </svg>
+
     <div class="chapter-about-titles">
         <h3 class="chapter-about-title js-title1">Qui sommes-nous</h3>
         <h3 class="chapter-about-title js-title2 hidden">Sur le projet</h3>
@@ -62,8 +70,5 @@
         </div>
     </div>
     <button class="about-close-button">Close</button>
-
-    <svg class="sideBarWave" width="100%" height="100%" viewBox="0 0 49vw 900" preserveEspectRatio="none"><path d="M200,0c0,0 -200,46.405 -200,177c0,130.595 126.228,90.241 149,287c22.772,196.759 51,436 51,436l32,0l-4,-900l-28,0Z" data-to="M0,0c0,0 0,46.405 0,177c0,130.595 1.152,98.101 0,296c-1.153,198.07 0,427 0,427l200,0l0,-900l-200,0Z"/></svg>
-    <svg class="placeHolder" width="100%" height="100%" viewBox="0 0 49vw 900" preserveEspectRatio="none"><path d="M.5,0V177c0,130.6,1.2,98.1,0,296s0,427,0,427H600V0Z"/></svg>
     
 </div>
