--- a/includes/views/pages/chapter.twig
+++ b/includes/views/pages/chapter.twig
@@ -36,18 +36,7 @@
                         {% for _slide in chapter.slides %}
                             <section class="slide">
                                 <div class="area {{ _slide.type }}">
-                                    {% if _slide.type == 'motion' %}
-                                        {% include './layouts/sectionMotion.twig' %}
-                                    {% endif %}
-                                    {% if _slide.type == 'three-bars' %}
-                                        {% include './layouts/sectionThreeBars.twig' %}
-                                    {% endif %}
-                                    {% if _slide.type == 'three-circles' %}
-                                        {% include './layouts/sectionCircle.twig' %}
-                                    {% endif %}
-                                    {% if _slide.type == 'two-bars' %}
-                                        {% include './layouts/sectionTwoBars.twig' %}
-                                    {% endif %}
+                                    {% include './modules/' ~ _slide.type  ~'.twig' %}
                                 </div>
                             </section>
                         {% endfor %}
