🚧 views > Change chapter content

--- a/includes/views/modules/threeBars.twig
+++ b/includes/views/modules/threeBars.twig
@@ -3,8 +3,8 @@
         <div class="slide1-bar1-fill"></div>
     </div>
     <div class="slide1-text-container">
-        <span class="slide1-subtitle">Géants de l'eau<br></span>
-        <span class="slide1-number">60 %<br></span><p class="slide1-text">des ressources naturelles d’eau douce sont partagées entre 9 pays. Le monde en compte 197.</p>
+        <span class="slide1-subtitle">{{ chapter.slides.slide_2.bar_1.title }}<br></span>
+        <span class="slide1-number">{{ chapter.slides.slide_2.bar_1.number }}<br></span><p class="slide1-text">{{ chapter.slides.slide_2.bar_1.text }}</p>
     </div>
 </div>
 <div class="slide1-container2">
@@ -12,14 +12,14 @@
         <div class="slide1-bar2-fill"></div>
     </div>
     <div class="slide1-text-container">
-        <span class="slide1-subtitle">Inaccesible<br></span>
-        <span class="slide1-number">10 %<br></span><p class="slide1-text">de la population mondiale n’a pas accès à l’eau potable. Soit 748 millions d’humains.</p>
+        <span class="slide1-subtitle">{{ chapter.slides.slide_2.bar_2.title }}<br></span>
+        <span class="slide1-number">{{ chapter.slides.slide_2.bar_2.number }}<br></span><p class="slide1-text">{{ chapter.slides.slide_2.bar_2.text }}</p>
     </div>
 </div>
 <div class="slide1-container3">
     <div class="slide1-bar3"></div>
     <div class="slide1-text-container">
-        <span class="slide1-subtitle">Course contre la montre<br></span>
-        <span class="slide1-number">5 Humains<br></span><p class="slide1-text">meurent toutes les minutes parce qu’ils n’ont pas accès à l’eau potable.</p>
+        <span class="slide1-subtitle">{{ chapter.slides.slide_2.bar_3.title }}<br></span>
+        <span class="slide1-number">{{ chapter.slides.slide_2.bar_3.number }}<br></span><p class="slide1-text">{{ chapter.slides.slide_2.bar_3.text }}</p>
     </div>
 </div>
