🚿 views > Fix text slide

--- a/includes/views/modules/text.twig
+++ b/includes/views/modules/text.twig
@@ -1,6 +1,6 @@
 <div class="slide3-container2">
-    <div class="slide3-container2-title">{{ chapter.slides.slide_2.title }}<br></div>
-    <div class="slide3-container2-label">{{ chapter.slides.slide_2.label }}<br></div>
-    <div class="slide3-container2-text">{{ chapter.slides.slide_2.text }}<br></div>
+    <div class="slide3-container2-title">{{ _slide.title }}<br></div>
+    <div class="slide3-container2-label">{{ _slide.label }}<br></div>
+    <div class="slide3-container2-text">{{ _slide.text }}<br></div>
     <div class="slide3-container2-text-border"></div>
 </div>
