--- a/includes/views/modules/threeBars.twig
+++ b/includes/views/modules/threeBars.twig
@@ -3,8 +3,8 @@
         <div class="slide1-bar1-fill" data-fill"{{ not _slide.ispercentage ? 0 : _slide.bar_1.number }}></div>
     </div>
     <div class="slide1-text-container">
-        <span class="slide1-subtitle">{{ chapter.slides.slide_2.bar_1.title }}<br></span>
-        <span class="slide1-number">{{ chapter.slides.slide_2.bar_1.number }}<br></span><p class="slide1-text">{{ chapter.slides.slide_2.bar_1.text }}</p>
+        <span class="slide1-subtitle">{{ _slide.bar_1.title }}<br></span>
+        <span class="slide1-number">{{ _slide.bar_1.number }}<br></span><p class="slide1-text">{{ _slide.bar_1.text }}</p>
     </div>
 </div>
 <div class="slide1-container2">
@@ -12,14 +12,14 @@
         <div class="slide1-bar2-fill" data-fill"{{ not _slide.ispercentage ? 0 : _slide.bar_2.number }}></div>
     </div>
     <div class="slide1-text-container">
-        <span class="slide1-subtitle">{{ chapter.slides.slide_2.bar_2.title }}<br></span>
-        <span class="slide1-number">{{ chapter.slides.slide_2.bar_2.number }}<br></span><p class="slide1-text">{{ chapter.slides.slide_2.bar_2.text }}</p>
+        <span class="slide1-subtitle">{{ _slide.bar_2.title }}<br></span>
+        <span class="slide1-number">{{ _slide.bar_2.number }}<br></span><p class="slide1-text">{{ _slide.bar_2.text }}</p>
     </div>
 </div>
 <div class="slide1-container3">
     <div class="slide1-bar3"></div>
     <div class="slide1-text-container">
-        <span class="slide1-subtitle">{{ chapter.slides.slide_2.bar_3.title }}<br></span>
-        <span class="slide1-number">{{ chapter.slides.slide_2.bar_3.number }}<br></span><p class="slide1-text">{{ chapter.slides.slide_2.bar_3.text }}</p>
+        <span class="slide1-subtitle">{{ _slide.bar_3.title }}<br></span>
+        <span class="slide1-number">{{ _slide.bar_3.number }}<br></span><p class="slide1-text">{{ _slide.bar_3.text }}</p>
     </div>
 </div>
